# Automated-Code-Review-Agent

./: Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
