[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "Automated Code Review RL Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
